// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot with isAuth true or false should snapshot with isAuth false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Profile
    getUser={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {},
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    user={
      Object {
        "city": "city1",
        "email": "",
        "name": "name1",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "push": false,
      "to": "/",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "push": false,
        "to": "/",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`snapshot with isAuth true or false should snapshot with isAuth true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Profile
    getUser={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {},
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    user={
      Object {
        "city": "city1",
        "email": "",
        "name": "name1",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Your Profile : 
        </h1>,
        <form
          className="col s12"
          onSubmit={[Function]}
        >
          <div
            className="row"
          >
            <div
              className="input-field col s12"
            >
              <label
                className="active"
                htmlFor="name"
              >
                Name
              </label>
              <input
                className="validate"
                id="name"
                onChange={[Function]}
                required={true}
                type="text"
                value="name1"
              />
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="input-field col s12"
            >
              <label
                className="active"
                htmlFor="city"
              >
                City
              </label>
              <input
                className="validate"
                id="city"
                onChange={[Function]}
                required={true}
                type="text"
                value="city1"
              />
            </div>
          </div>
          <button
            className="waves-effect waves-light btn"
          >
             Submit 
          </button>
        </form>,
      ],
      "className": "container row",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Your Profile : ",
        },
        "ref": null,
        "rendered": "Your Profile : ",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  className="active"
                  htmlFor="name"
                >
                  Name
                </label>
                <input
                  className="validate"
                  id="name"
                  onChange={[Function]}
                  required={true}
                  type="text"
                  value="name1"
                />
              </div>
            </div>,
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  className="active"
                  htmlFor="city"
                >
                  City
                </label>
                <input
                  className="validate"
                  id="city"
                  onChange={[Function]}
                  required={true}
                  type="text"
                  value="city1"
                />
              </div>
            </div>,
            <button
              className="waves-effect waves-light btn"
            >
               Submit 
            </button>,
          ],
          "className": "col s12",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="input-field col s12"
              >
                <label
                  className="active"
                  htmlFor="name"
                >
                  Name
                </label>
                <input
                  className="validate"
                  id="name"
                  onChange={[Function]}
                  required={true}
                  type="text"
                  value="name1"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    className="active"
                    htmlFor="name"
                  >
                    Name
                  </label>,
                  <input
                    className="validate"
                    id="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value="name1"
                  />,
                ],
                "className": "input-field col s12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Name",
                    "className": "active",
                    "htmlFor": "name",
                  },
                  "ref": null,
                  "rendered": "Name",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "validate",
                    "id": "name",
                    "onChange": [Function],
                    "required": true,
                    "type": "text",
                    "value": "name1",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="input-field col s12"
              >
                <label
                  className="active"
                  htmlFor="city"
                >
                  City
                </label>
                <input
                  className="validate"
                  id="city"
                  onChange={[Function]}
                  required={true}
                  type="text"
                  value="city1"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    className="active"
                    htmlFor="city"
                  >
                    City
                  </label>,
                  <input
                    className="validate"
                    id="city"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value="city1"
                  />,
                ],
                "className": "input-field col s12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "City",
                    "className": "active",
                    "htmlFor": "city",
                  },
                  "ref": null,
                  "rendered": "City",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "validate",
                    "id": "city",
                    "onChange": [Function],
                    "required": true,
                    "type": "text",
                    "value": "city1",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": " Submit ",
              "className": "waves-effect waves-light btn",
            },
            "ref": null,
            "rendered": " Submit ",
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Your Profile : 
          </h1>,
          <form
            className="col s12"
            onSubmit={[Function]}
          >
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  className="active"
                  htmlFor="name"
                >
                  Name
                </label>
                <input
                  className="validate"
                  id="name"
                  onChange={[Function]}
                  required={true}
                  type="text"
                  value="name1"
                />
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  className="active"
                  htmlFor="city"
                >
                  City
                </label>
                <input
                  className="validate"
                  id="city"
                  onChange={[Function]}
                  required={true}
                  type="text"
                  value="city1"
                />
              </div>
            </div>
            <button
              className="waves-effect waves-light btn"
            >
               Submit 
            </button>
          </form>,
        ],
        "className": "container row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Your Profile : ",
          },
          "ref": null,
          "rendered": "Your Profile : ",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="row"
              >
                <div
                  className="input-field col s12"
                >
                  <label
                    className="active"
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <input
                    className="validate"
                    id="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value="name1"
                  />
                </div>
              </div>,
              <div
                className="row"
              >
                <div
                  className="input-field col s12"
                >
                  <label
                    className="active"
                    htmlFor="city"
                  >
                    City
                  </label>
                  <input
                    className="validate"
                    id="city"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value="city1"
                  />
                </div>
              </div>,
              <button
                className="waves-effect waves-light btn"
              >
                 Submit 
              </button>,
            ],
            "className": "col s12",
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="input-field col s12"
                >
                  <label
                    className="active"
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <input
                    className="validate"
                    id="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value="name1"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      className="active"
                      htmlFor="name"
                    >
                      Name
                    </label>,
                    <input
                      className="validate"
                      id="name"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value="name1"
                    />,
                  ],
                  "className": "input-field col s12",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Name",
                      "className": "active",
                      "htmlFor": "name",
                    },
                    "ref": null,
                    "rendered": "Name",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "validate",
                      "id": "name",
                      "onChange": [Function],
                      "required": true,
                      "type": "text",
                      "value": "name1",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="input-field col s12"
                >
                  <label
                    className="active"
                    htmlFor="city"
                  >
                    City
                  </label>
                  <input
                    className="validate"
                    id="city"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value="city1"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      className="active"
                      htmlFor="city"
                    >
                      City
                    </label>,
                    <input
                      className="validate"
                      id="city"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value="city1"
                    />,
                  ],
                  "className": "input-field col s12",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "City",
                      "className": "active",
                      "htmlFor": "city",
                    },
                    "ref": null,
                    "rendered": "City",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "validate",
                      "id": "city",
                      "onChange": [Function],
                      "required": true,
                      "type": "text",
                      "value": "city1",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": " Submit ",
                "className": "waves-effect waves-light btn",
              },
              "ref": null,
              "rendered": " Submit ",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
